--- a/code/API_definitions/webrtc-call-handling.yaml
+++ b/code/API_definitions/webrtc-call-handling.yaml
@@ -193,7 +193,7 @@ externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/WebRTC
 servers:
-  - url: '{apiRoot}/webrtc-call-handling/v0.2rc1'
+  - url: '{apiRoot}/webrtc-call-handling/v0.2'
     variables:
       apiRoot:
         description: API root
