fix(*): General description fixes
- Removed rc.x
- Replaced "vvoip" references for "media"
- Replaced "webrtc gw" references for "network"
- Removed references to NotificationChannel
- Improved terms and definitions
- Improved deviceId descriptions
- Removed access token reference on PUT registration
- CHANGELOG reviewed
- Trailing spaces and spelling errors
- Renamed webrtc-events.yaml to webrtc-events-subscription.yaml

--- a/code/API_definitions/webrtc-notification-channel.yaml
+++ b/code/API_definitions/webrtc-notification-channel.yaml
@@ -35,7 +35,7 @@ paths:
       tags:
         - Notification Channel
       summary: Retrieves Notification Channel
-      description: '**The client shall use the regSessionId to construct the API path**'
+      description: '**The client shall use the registrationId to construct the API path**'
       parameters:
         - $ref: '#/components/parameters/hdrTransactionId'
         - $ref: '#/components/parameters/hdrClientId'
@@ -65,7 +65,7 @@ paths:
       tags:
         - Notification Channel
       summary: Update Notification Channel properties e.g., expire time, tokens
-      description: '**The client shall use regSessionId to construct API path**'
+      description: '**The client shall use registrationId to construct API path**'
       parameters:
         - $ref: '#/components/parameters/hdrTransactionId'
         - $ref: '#/components/parameters/hdrClientId'
@@ -95,7 +95,7 @@ paths:
       tags:
         - Notification Channel
       summary: Delete Notification Channel
-      description: '**The client shall use regSessionId to construct API path**'
+      description: '**The client shall use registrationId to construct API path**'
       parameters:
         - $ref: '#/components/parameters/hdrTransactionId'
         - $ref: '#/components/parameters/hdrClientId'
