--- a/code/API_definitions/webrtc-call-handling.yaml
+++ b/code/API_definitions/webrtc-call-handling.yaml
@@ -9,16 +9,16 @@ info:
 
     To handle audio/video sessions, what we usually known as *calls*, the network
     requires to identify both involved parties: caller, the origin, and the callee,
-    the destination. Once identified the endpoints required to be connected, then
+    the destination. Once identified the involved communication endpoints, then
     it is required to define *how* to send media from one endpoint to the other.
 
     The first point, *identify the endpoints* is solved in CAMARA via direct API
-    parameters on the API request. The later, *negotiate how to connect* is solved
+    parameters on the API request. The later, *negotiate how to connect*, is solved
     sharing SDP information between peers.
 
     In that point, the WebRTC technology is used to simplify the access to the
     media, and get a simple and well-known protocol to solve the media transmission
-    requirement.
+    requirements.
 
     Let's dig on it on section 3: API functionality
 
@@ -31,13 +31,23 @@ info:
           or to check current status for any reason.
         - Ability to upgrade to video, change sending audio/video parameters, or
           notify the network about any modification on your side of the calls.
-        - Ability to hangup the call. Stop the transmision, and delete your audio
+        - Ability to hangup the call. Stop the transmission, and delete your audio
           and video session.
       - An additional subscription to webrtc-events API is required to receive
         incoming events from network side (ex. remote hangup event).
 
     ## 2. Relevant terms and definitions
 
+    - **media session**: An exchange of media between devices.
+      Typical example of session is a "single one-to-one call".
+    - **mediaSessionId**: Unique identifier of a **media session** using
+      webrtc-call-handling API. Retrieved using the `webrtc-call-handling` API
+    - **deviceId**: A unique identifier for the physical device where a media
+      session is initiated. It is provided by the WebRTC application, it remains
+      consistent across multiple installations or logins on the same device. Its
+      primary function is to ensure that only one WebRTC session (**registration**)
+      is active per device at a time, enabling the gateway to clean up any stale
+      sessions if a new session is initiated on the same device.
     - **clientId**: A unique identifier, assigned by the network, for each client
       instance or **regSession**. It is best practice for the gateway to issue a new
       clientId for each login or session. This approach helps the gateway maintain
@@ -84,7 +94,7 @@ info:
     to a remote destination.
 
     ```
-    POST /webrtc-call-handling/vwip/sessions
+    POST /webrtc-call-handling/v0.2/sessions
     {
       "originatorAddress": "tel:+17085852753",
       "receiverAddress": "tel:+17085854000",
@@ -113,7 +123,7 @@ info:
     that case, you will include your local offer on the audio/video session creation.
 
     ```
-    POST /webrtc-call-handling/vwip/sessions
+    POST /webrtc-call-handling/v0.2/sessions
     {
         "originatorAddress": "tel:+17085852753",
         "receiverAddress": "tel:+17085854000",
@@ -128,7 +138,7 @@ info:
     about extra information required and connection status via de the
     webrtc-events API.
 
-    Check inline webrtc-events API inline documentation and supporting documents
+    Check webrtc-events API inline documentation and supporting documents
     for further information.
 
     ### 3.2. Hanging up a call
@@ -152,11 +162,11 @@ info:
 
     Final step is to include a local offer. We already seen at 3.1 that a local
     SDP is required, in this case, we will use the PUT command to modify the
-    audio/video session and include the information about the responding endpoint.
+    audio/video session and include the information about the responding device.
 
     Let's say that we are responding this session `0AEE1B58BAEEDA3EABA42B32EBB3DFE0DEAD`:
     ```
-    PUT /webrtc-call-handling/vwip/sessions/0AEE1B58BAEEDA3EABA42B32EBB3DFE0DEAD
+    PUT /webrtc-call-handling/v0.2/sessions/0AEE1B58BAEEDA3EABA42B32EBB3DFE0DEAD
     {
         "status": "InProgress",
         "answer": {
@@ -220,10 +230,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/VvoipSessionInformation'
+              $ref: '#/components/schemas/MediaSessionInformation'
             examples:
-              VVOIP session request:
-                $ref: '#/components/examples/exampleVoiceVideoSessionRequest'
+              Media session request:
+                $ref: '#/components/examples/exampleMediaSessionRequest'
       responses:
         '201':
           description: Created
@@ -233,10 +243,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VvoipSessionInformation'
+                $ref: '#/components/schemas/MediaSessionInformation'
               examples:
                 SessionCreated:
-                  $ref: '#/components/examples/exampleVoiceVideoSessionResponse'
+                  $ref: '#/components/examples/exampleMediaSessionResponse'
         '400':
           $ref: '#/components/responses/Generic400'
         '401':
@@ -247,9 +257,9 @@ paths:
     get:
       tags:
         - Call handling
-      summary: Get the vvoip session information
+      summary: Get the media session information
       description: |
-        Get the VVoIP Session description based on `mediaSessionId`.
+        Get the media Session description based on `mediaSessionId`.
 
         ** The client shall construct the API path using the `mediaSessionId` supplied
         in the session creation response (origination) or in the invitation notification
@@ -271,7 +281,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VvoipSessionInformation'
+                $ref: '#/components/schemas/MediaSessionInformation'
         '401':
           $ref: '#/components/responses/Generic401'
         '403':
@@ -281,13 +291,13 @@ paths:
     delete:
       tags:
         - Call handling
-      summary: Cancel or Terminate the vvoip session
+      summary: Cancel or Terminate the media session
       description: >
-        Cancel a 1-1 vvoip session (as originator),
+        Cancel a 1-1 media session (as originator),
 
-        Decline a 1-1 vvoip session (as receiver),
+        Decline a 1-1 media session (as receiver),
 
-        Terminate a 1-1 an ongoing vvoip session
+        Terminate a 1-1 an ongoing media session
 
         ** The client shall construct the API path using the mediaSessionId supplied in the session creation response (origination) or in the invitation notification (termination). **'
       operationId: deleteSessionById
@@ -314,9 +324,9 @@ paths:
     put:
       tags:
         - Call handling
-      summary: Update the status of the vvoip session
+      summary: Update the status of the media session
       description: |
-        Update the status of the vvoip session, this may include updating SDP media
+        Update the status of the media session, this may include updating SDP media
 
         The API consumer shall construct the API path using the `mediaSessionId` supplied in the session creation response (origination) or in the invitation notification (termination).
       operationId: updateSessionStatus
@@ -331,15 +341,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/VvoipSessionInformation'
+              $ref: '#/components/schemas/MediaSessionInformation'
             examples:
               Update inProgress (update media candidates):
                 $ref: '#/components/examples/exampleSessionStatus183InProgress'
-              Update ringing (endpoint is ringing):
+              Update ringing (device user endpoint is ringing):
                 $ref: '#/components/examples/exampleSessionStatus180Ringing'
               Update connected (call is established):
                 $ref: '#/components/examples/exampleSessionStatus200Connected'
-              Update hold (call has been holded):
+              Update hold (call has been placed on call waiting mode):
                 $ref: '#/components/examples/exampleSessionStatusHold'
               Update resume (call has been resumed):
                 $ref: '#/components/examples/exampleSessionStatusResume'
@@ -347,19 +357,19 @@ paths:
         '200':
           description: |
             Updated the session status (with SDP data).
-            It will confirm the status defined on the PUT operaton.
+            It will confirm the status defined on the PUT operation.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VvoipSessionInformation'
+                $ref: '#/components/schemas/MediaSessionInformation'
               examples:
                 Update inProgress (update media candidates):
                   $ref: '#/components/examples/exampleSessionStatus183InProgress'
-                Update ringing (endpoint is ringing):
+                Update ringing (device user endpoint is ringing):
                   $ref: '#/components/examples/exampleSessionStatus180Ringing'
                 Update connected (call is established):
                   $ref: '#/components/examples/exampleSessionStatus200Connected'
-                Update hold (call has been holded):
+                Update hold (call has been placed on call waiting mode):
                   $ref: '#/components/examples/exampleSessionStatusHold'
                 Update resume (call has been resumed):
                   $ref: '#/components/examples/exampleSessionStatusResume'
@@ -386,7 +396,7 @@ components:
     hdrClientId:
       name: clientId
       in: header
-      description: The Client Id assigned by WebRTC GW
+      description: The Client Id assigned by the network
       required: true
       style: simple
       explode: false
@@ -396,7 +406,7 @@ components:
     pathParamMediaSessionId:
       name: mediaSessionId
       in: path
-      description: The sessionId assigned by the WebRTC GW for the vvoip session
+      description: The sessionId assigned by the network for the media session
       required: true
       style: simple
       explode: false
@@ -411,7 +421,7 @@ components:
         pattern: ^[a-zA-Z0-9-]{0,55}$
         example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
   schemas:
-    VvoipSessionInformation:
+    MediaSessionInformation:
       type: object
       properties:
         originatorAddress:
@@ -445,9 +455,9 @@ components:
         mediaSessionId:
           type: string
           description: >-
-            The VVOIP session ID created by WebRTC Gateway. The mediaSessionId shall not be
+            The media session ID created by the network. The mediaSessionId shall not be
             included in POST requests by the client, but must be included in the notifications
-            from the WebRTC GW to client.
+            from the network to the client device.
           example: 0AEE1B58BAEEDA3EABA42B32EBB3DFE07E9CFF402EAF9EED8EF
         callObjectRef:
           type: string
@@ -491,13 +501,13 @@ components:
             An inlined session description in SDP format [RFC4566].If XML syntax is used, the content of this element SHALL be embedded in a CDATA section
     SessionNotification:
       allOf:
-        - $ref: '#/components/schemas/VvoipSessionInformation'
+        - $ref: '#/components/schemas/MediaSessionInformation'
       required:
         - status
         - mediaSessionId
     SessionStatus:
       type: string
-      description: Provides the status of the VVOIP session. During the session creation, this attribute SHALL NOT be included in the request.
+      description: Provides the status of the media session. During the session creation, this attribute SHALL NOT be included in the request.
       enum:
         - Initial
         - InProgress
@@ -537,7 +547,7 @@ components:
       pattern: '^(tel:+[0-9]{5,15}|sip:.+@.+|.+)$'
       example: 'tel:+11234567899'
   examples:
-    exampleVoiceVideoSessionRequest:
+    exampleMediaSessionRequest:
       value:
         originatorAddress: tel:+17085852753
         originatorName: tel:+17085852753
@@ -546,7 +556,7 @@ components:
         offer:
           sdp: "v=0\r\no=- 8066321617929821805 2 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 42988 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:2448:7a05:9b11:66f2:c9e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:1645903805 1 udp 2122262783 2001:e0:410:2448:7a05:9b11:66f2:c9e 42988 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:4eKp\r\na=ice-pwd:D4sF5Pv9vx9ggaqxBlHbAFMx\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:Xm3YciqVIWFNSwy19e9MvfZ2YOdAZil7oT/tHjdf\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\n"
         clientCorrelator: fda6e26d-e7c8-4596-870c-c083c0d39b2c
-    exampleVoiceVideoSessionResponse:
+    exampleMediaSessionResponse:
       value:
         originatorAddress: 'tel:+17085852753'
         originatorName: 'tel:+17085852753'
