--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -6,18 +6,19 @@ info:
     This API provides the API consumer with the capabilities to manage
     registration and connectivity towards the network.
 
-    The network requires that the API consumer application registers and identifies an end user device  (its MSISDN) before enabling any media session services provided by the WebRTC APIs. 
-A registration returns 
+    The network requires that the API consumer application registers and
+    identifies an end user device before enabling any media
+    session services provided by the WebRTC APIs.
 
-* a `registrationId` to manage a registration later
-* a `clientId` (in the `connectivityInformation`) that must be subsequently used in all webrtc service API calls to the network for that end user.
-    session before enabling or activating any service. In order to create audio and
-    video sessions, you device (or endpoint) need to have a valid registration on
-    the network. This API provide that feature, and allow users to create audio and
-    video sessions using the telco network.
+    A device registration created via this API will provide:
+
+    * a `registrationId` to manage a registration later
+    * a `clientId` (in the `connectivityInformation`) that must be subsequently
+      used in all webrtc service API calls to the network for that end user.
 
     All telco services are based on subscriptions, this API allows the user to
-    create a session where you can consume the audio/video part of the telco services.
+    create a registration session where you can consume the audio/video part of
+    the telco services.
 
     **Use cases to cover:**
       - Functional:
@@ -29,15 +30,15 @@ A registration returns
 
     ## 2. Relevant terms and definitions
 
-    - **regSession** A registration session. A valid client running on a valid
+    - **registration** A media device session. A valid client running on a valid
       device, with permission to use the network capabilities to create and receive
-      calls (audio/video sessions).
-    - **regSessionId**: Unique identifier of an WebRTC endpoint **registration**.
+      (audio/video) calls (media sessions).
+    - **registrationId**: Unique identifier of an WebRTC device **registration**.
       Retrieved using the `webrtc-registration` API
-    - **deviceId**: A unique identifier for the physical device where a WebRTC
+    - **deviceId**: A unique identifier for the physical device where a media
       session is initiated. It is provided by the WebRTC application, it remains
       consistent across multiple installations or logins on the same device. Its
-      primary function is to ensure that only one WebRTC session (**regSession**)
+      primary function is to ensure that only one WebRTC session (**registration**)
       is active per device at a time, enabling the gateway to clean up any stale
       sessions if a new session is initiated on the same device.
     - **clientId**: A unique identifier, assigned by the network, for each client
@@ -45,6 +46,10 @@ A registration returns
       clientId for each login or session. This approach helps the gateway maintain
       clear indexing or mapping for quicker processing and simplifies troubleshooting
       by clearly distinguishing one session from another.
+    - **media session**: An exchange of media between devices.
+      Typical example of session is a "single one-to-one call".
+    - **mediaSessionId**: Unique identifier of a Voice or Video **session** using
+      webrtc-call-handling API. Retrieved using the `webrtc-call-handling` API
     - **WebRTC**: WebRTC is a free and open-source project providing web browsers
       and mobile applications with real-time communication via application programming
       interfaces. It allows audio and video communication and streaming to work
@@ -56,10 +61,10 @@ A registration returns
     ## 3. API functionality
 
     This API allows to create device registrations. These, identified by a unique
-    `regSessionId` can be updated and terminated via this API and its methods.
+    `registrationId` can be updated and terminated via this API and its methods.
     - **POST**: Create a new device registration using a valid authorization token.
-    - **PUT**: Update a device registration via its unique `regSessionId`
-    - **DELETE**: Finish an existing device registration via its unique `regSessionId`
+    - **PUT**: Update a device registration via its unique `registrationId`
+    - **DELETE**: Finish an existing device registration via its unique `registrationId`
     To receive server-side updates about new voice-video sessions, you need to
     use `webrtc-events` API.
 
@@ -120,9 +125,6 @@ paths:
       summary: Create a registration
       description: |-
         API used to create a new registration of a device with the network identified by a registrationId (in UUID format).
-        creates a valid communications session on the network system identified
-        by a `regSessionId'. This unique ID is used for each action where the
-        endpoint has been involved in connecting to the network.
       operationId: createRegistration
       parameters:
         - $ref: '#/components/parameters/x-correlator'
@@ -150,22 +152,21 @@ paths:
           $ref: "#/components/responses/Generic401"
         '403':
           $ref: "#/components/responses/CreateSessionForbidden403"
-  /sessions/{regSessionId}:
+  /sessions/{registrationId}:
     put:
       tags:
         - Registration
-      summary: Refresh access token and network registration.
+      summary: Refresh network registration.
       description: |
-        API Endpoint used to refresh the registration on the network. Sharing a
-        new AccessToken with network if it corresponds. The AccessToken
-        is expected to be received from the Auth server.
-
-        **The client shall use the regSessionId to construct the API path.**
+        API Endpoint used to renew or refresh the registration on the network.
+        It is possible to renew the registration before it expires. This API
+        endpoint will trigger a network registration refresh based on a
+        pre-existing registration.
       operationId: updateRegistrationById
       parameters:
         - $ref: '#/components/parameters/x-correlator'
         - $ref: '#/components/parameters/hdrClientId'
-        - $ref: '#/components/parameters/pathParamRegSessionId'
+        - $ref: '#/components/parameters/pathParamRegistrationId'
       security:
         - openId:
             - webrtc-registration:sessions:write
@@ -190,14 +191,14 @@ paths:
       description: |-
         API endpoint used to remove a valid registration on the network. This action
         frees any resource and invalidates future actions that involves this
-        registration between the endpoint and the network.
+        registration between the device and the network.
 
-        **The client shall use the regSessionId to construct the API path.**
+        Use the registrationId to identify the registration to delete.
       operationId: deleteRegistrationById
       parameters:
         - $ref: '#/components/parameters/x-correlator'
         - $ref: '#/components/parameters/hdrClientId'
-        - $ref: '#/components/parameters/pathParamRegSessionId'
+        - $ref: '#/components/parameters/pathParamRegistrationId'
       security:
         - openId:
             - webrtc-registration:sessions:delete
@@ -244,10 +245,10 @@ components:
       explode: false
       schema:
         type: string
-    pathParamRegSessionId:
-      name: regSessionId
+    pathParamRegistrationId:
+      name: registrationId
       in: path
-      description: The sessionId assigned by the registration service
+      description: The registrationId assigned by the registration service
       required: true
       style: simple
       explode: false
@@ -259,7 +260,10 @@ components:
       properties:
         deviceId:
           type: string
-          description: The device-id of the client in UUID format.
+          description: |-
+            The device-id of the client in UUID format. A unique identifier for
+            the physical device where a registration is initiated. Generated
+            by the WebRTC application, and consistent within the same device.
     regSessionResponse:
       type: object
       properties:
@@ -269,7 +273,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/RegistrationInformation'
-        regSessionId:
+        registrationId:
           type: string
           description: The registration session ID is returned when registering a device with the network . Clients must utilize this ID to as a parameter in the call-handling and subscription APIs.
     ConnectionInformation:
@@ -277,7 +281,7 @@ components:
       properties:
         clientId:
           type: string
-          description: The unique id assigned by WebRTC GW for identifying the association of device with WebRTC GW. The clients are required to include this value in clientId header.
+          description: The unique id assigned by network for identifying the association of device with WebRTC GW. The clients are required to include this value in clientId header.
     RegistrationStatus:
       type: string
       enum:
