--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -10,15 +10,15 @@ info:
     identifies an end user device before enabling any media
     session services provided by the WebRTC APIs.
 
-    A device registration created via this API will provide:
+    A device registration created via this API will register a unique `deviceId`
+    created by the API consumer (WebRTC application) and it will will provide a
+    `registrationId` to manage a registration later.
+    Any subsequent request from the API consumer must include the unique
+    `registrationId` that will be linked to the registration previously defined.
 
-    * a `registrationId` to manage a registration later
-    * a `clientId` (in the `connectivityInformation`) that must be subsequently
-      used in all webrtc service API calls to the network for that end user.
-
-    All telco services are based on subscriptions, this API allows the user to
-    create a registration session where you can consume the audio/video part of
-    the telco services.
+    All operator network services are based on device registrations, this API
+    allows the user to create a registration session that enable the audio/video
+    functionalities exposed by the operator network.
 
     **Use cases to cover:**
       - Functional:
@@ -41,15 +41,12 @@ info:
       primary function is to ensure that only one WebRTC session (**registration**)
       is active per device at a time, enabling the gateway to clean up any stale
       sessions if a new session is initiated on the same device.
-    - **clientId**: A unique identifier, assigned by the network, for each client
-      instance or **regSession**. It is best practice for the gateway to issue a new
-      clientId for each login or session. This approach helps the gateway maintain
-      clear indexing or mapping for quicker processing and simplifies troubleshooting
-      by clearly distinguishing one session from another.
     - **media session**: An exchange of media between devices.
       Typical example of session is a "single one-to-one call".
     - **mediaSessionId**: Unique identifier of a Voice or Video **session** using
       webrtc-call-handling API. Retrieved using the `webrtc-call-handling` API
+    - **x-correlator**: Unique ID associated to the REST _transaction_ created by the
+      REST client. It is used to correlate requests and responses and help debugging.
     - **WebRTC**: WebRTC is a free and open-source project providing web browsers
       and mobile applications with real-time communication via application programming
       interfaces. It allows audio and video communication and streaming to work
@@ -124,7 +121,10 @@ paths:
         - Registration
       summary: Create a registration
       description: |-
-        API used to create a new registration of a device with the network identified by a registrationId (in UUID format).
+        API endpoint used to create a new registration of a device in the network.
+        It uses as main body data the `deviceId` to store its reference.
+        In response, a `registrationId` (in UUID format) is provided to identify
+        this device registration within the network.
       operationId: createRegistration
       parameters:
         - $ref: '#/components/parameters/x-correlator'
@@ -165,7 +165,6 @@ paths:
       operationId: updateRegistrationById
       parameters:
         - $ref: '#/components/parameters/x-correlator'
-        - $ref: '#/components/parameters/hdrClientId'
         - $ref: '#/components/parameters/pathParamRegistrationId'
       security:
         - openId:
@@ -197,7 +196,6 @@ paths:
       operationId: deleteRegistrationById
       parameters:
         - $ref: '#/components/parameters/x-correlator'
-        - $ref: '#/components/parameters/hdrClientId'
         - $ref: '#/components/parameters/pathParamRegistrationId'
       security:
         - openId:
@@ -236,15 +234,6 @@ components:
         type: string
         pattern: ^[a-zA-Z0-9-]{0,55}$
         example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
-    hdrClientId:
-      name: clientId
-      in: header
-      description: The Client ID assigned by WebRTC GW
-      required: true
-      style: simple
-      explode: false
-      schema:
-        type: string
     pathParamRegistrationId:
       name: registrationId
       in: path
@@ -257,6 +246,8 @@ components:
   schemas:
     regSessionRequest:
       type: object
+      required:
+        - deviceId
       properties:
         deviceId:
           type: string
@@ -267,21 +258,11 @@ components:
     regSessionResponse:
       type: object
       properties:
-        connectionInformation:
-          $ref: '#/components/schemas/ConnectionInformation'
         regInfo:
-          type: array
-          items:
-            $ref: '#/components/schemas/RegistrationInformation'
+          $ref: '#/components/schemas/RegistrationInformation'
         registrationId:
           type: string
           description: The registration session ID is returned when registering a device with the network . Clients must utilize this ID to as a parameter in the call-handling and subscription APIs.
-    ConnectionInformation:
-      type: object
-      properties:
-        clientId:
-          type: string
-          description: The unique id assigned by network for identifying the association of device with WebRTC GW. The clients are required to include this value in clientId header.
     RegistrationStatus:
       type: string
       enum:
@@ -289,8 +270,8 @@ components:
     RegistrationInformation:
       type: object
       properties:
-        msisdn:
-          type: string
+        phoneNumber:
+          $ref: '#/components/schemas/PhoneNumber'
         regStatus:
           $ref: '#/components/schemas/RegistrationStatus'
     ErrorInfo:
@@ -309,6 +290,12 @@ components:
         code:
           type: string
           description: Friendly Code to describe the error
+    PhoneNumber:
+      description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, prefixed with '+'.
+      type: string
+      pattern: '^\+[1-9][0-9]{4,14}$'
+      example: "+123456789"
+
   responses:
     # Method specific responses
     CreateSessionBadRequest400:
@@ -384,7 +371,7 @@ components:
               value:
                 status: 403
                 code: INVALID_TOKEN_CONTEXT
-                message: "{{field}} is not consistent with access token."
+                message: "device is not consistent with access token."
             CREATE_403_MAX_REGISTRATION_PER_USER:
               # summary: Max registration per user
               value:
